--- a/SaraiManagement/appsettings.json
+++ b/SaraiManagement/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Data": {
+    "SaraiManagement": { "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true" }
+  },
   "AllowedHosts": "*"
 }
+
