--- a/SaraiManagement/appsettings.json
+++ b/SaraiManagement/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "Data": {
-    "SaraiManagement": { "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true" }
+    "SaraiManagement2021": { "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true" }
   },
   "AllowedHosts": "*"
 }
-
