--- a/SaraiManagement/SaraiManagement.csproj
+++ b/SaraiManagement/SaraiManagement.csproj
@@ -18,5 +18,7 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameWorkCore.Tools.DotNet" Version="2.0.3" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 	
 </Project>
