--- a/SaraiManagement/appsettings.json
+++ b/SaraiManagement/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "Data": {
-    "SaraiManagement2021": { "ConnectionString": "Server=FidelisPC\\SQLEXPRESS;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true" }
+    "SaraiManagement2021": { "ConnectionString": "Server=FidelisPC;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true" }
   },
   "AllowedHosts": "*"
 }
