--- a/SaraiManagement/SaraiManagement.csproj
+++ b/SaraiManagement/SaraiManagement.csproj
@@ -6,9 +6,13 @@
 
   <ItemGroup>
     <Compile Remove="Imagens\**" />
+    <Compile Remove="Migrations\**" />
     <Content Remove="Imagens\**" />
+    <Content Remove="Migrations\**" />
     <EmbeddedResource Remove="Imagens\**" />
+    <EmbeddedResource Remove="Migrations\**" />
     <None Remove="Imagens\**" />
+    <None Remove="Migrations\**" />
   </ItemGroup>
 
   <ItemGroup>
