--- a/SaraiManagement/SaraiManagement.csproj
+++ b/SaraiManagement/SaraiManagement.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>491d9a0e-9dbd-48a4-b760-dd74d8464b5e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
