--- a/SaraiManagement/appsettings.json
+++ b/SaraiManagement/appsettings.json
@@ -11,7 +11,7 @@
     //  "ConnectionString": "Server=.\\SQLEXPRESS;Database=SaraiManagement;Trusted_Connection=true;MultipleActiveResultSets=true"
     //}
     "SaraiManagement2021": {
-      "ConnectionString": "Data Source=SQL5053.site4now.net;Initial Catalog=db_a75b16_saraimanagement;User Id=db_a75b16_saraimanagement_admin;Password=JEDM12345",
+      "ConnectionString": "Data Source=SQL5053.site4now.net;Initial Catalog=db_a75b16_saraimanagement;User Id=db_a75b16_saraimanagement_admin;Password=JEDM12345;MultipleActiveResultSets=true"
     }
   },
   "AllowedHosts": "*"
